--- a/cleaning-repairs-dlo.ipynb
+++ b/cleaning-repairs-dlo.ipynb
@@ -17,8 +17,7 @@
     "sys.argv.append('housing_repairs_repairs_dlo')\n",
     "\n",
     "sys.argv.append('--cleaned_repairs_s3_bucket_target')\n",
-    "sys.argv.append('s3://dataplatform-stg-refined-zone/housing/repairs-dlo/cleaned-repairs')\n",
-    "\n"
+    "sys.argv.append('s3://dataplatform-stg-refined-zone/housing/repairs-dlo/cleaned-repairs')"
    ]
   },
   {
@@ -71,13 +70,21 @@
     "glueContext = GlueContext(sc)\n",
     "logger = glueContext.get_logger()\n",
     "job = Job(glueContext)\n",
-    "job.init(args['JOB_NAME'], args)\n",
-    "\n",
+    "job.init(args['JOB_NAME'], args)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "logger.info('Fetch Source Data')\n",
     "\n",
     "source_data = glueContext.create_dynamic_frame.from_catalog(\n",
     "    name_space=source_catalog_database,\n",
     "    table_name=source_catalog_table,\n",
+    "#     push_down_predicate=\"import_date==max(import_date)\"\n",
     ") \n",
     "\n",
     "df = source_data.toDF()\n",
@@ -99,19 +106,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# clean up column names\n",
+    "logger.info('clean up column names')\n",
     "df2 = df.toDF(*[c.lower().replace(' ', '_') for c in df.columns])\n",
     "df2 = df.toDF(*[c.lower().replace('-', '_') for c in df.columns])\n",
     "df2 = df.toDF(*[c.lower().replace('__', '_') for c in df.columns])\n",
-    "print(df2)\n",
     "\n",
     "logger.info('convert timestamp column to a datetime field type')\n",
     "df2 = df2.withColumn('timestamp', F.to_timestamp(\"timestamp\", \"dd/MM/yyyy HH:mm:ss\"))\n",
-    "# df = df.withColumn('address', F.col('Address of repair'))\n",
-    "# df = df.withColumn('address', F.regexp_replace('address', '\\n', ' '))\n",
     "\n",
+    "# convert resident name to title case\n",
     "df2 = df2.withColumn('name_of_resident', F.initcap(F.col('name_of_resident')))\n",
+    "\n",
+    "# add new data source column to specify which repairs sheet the repair came from\n",
     "df2 = df2.withColumn('data_source', F.lit('DLO'))\n",
     "\n",
+    "# rename column names\n",
     "df2 = df2.withColumnRenamed('name_of_resident', 'name_full') \\\n",
     "    .withColumnRenamed('job_description', 'description_of_work') \\\n",
     "    .withColumnRenamed('which_trade_needs_to_respond_to_repair?', 'trade_description') \\\n",
