update electrical_mechanical_fire data location
Co-authored-by: b-dalton <ben.dalton@madetech.com>
Co-authored-by: maysakanoni <maysa@madetech.com>

--- a/cleaning-repairs-heritage.ipynb
+++ b/cleaning-repairs-heritage.ipynb
@@ -38,7 +38,7 @@
     "from pyspark.sql.types import StringType\n",
     "from awsglue.dynamicframe import DynamicFrame\n",
     "#from helpers import get_glue_env_var, PARTITION_KEYS\n",
-    "#from repairs_cleaning_helpers import udf_map_repair_priority, remove_multiple_and_trailing_underscores_and_lowercase\n",
+    "#from repairs_cleaning_helpers import udf_map_repair_priority, clean_column_names\n",
     "\n",
     "def getLatestPartitions(dfa):\n",
     "   dfa = dfa.where(col('import_year') == dfa.select(max('import_year')).first()[0])\n",
@@ -158,7 +158,7 @@
     "# convert to a UDF Function by passing in the function and the return type of function (string in this case)\n",
     "udf_map_repair_priority = F.udf(map_repair_priority, StringType())\n",
     "\n",
-    "def remove_multiple_and_trailing_underscores_and_lowercase(df):\n",
+    "def clean_column_names(df):\n",
     "    # remove trialing underscores\n",
     "    df = df.select([F.col(col).alias(re.sub(\"_$\", \"\", col)) for col in df.columns])\n",
     "    # lowercase and remove double underscores\n",
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = remove_multiple_and_trailing_underscores_and_lowercase(df)\n",
+    "df2 = clean_column_names(df)\n",
     "\n",
     "df2 = df2.withColumn('time_stamp', F.to_timestamp(\"time_stamp\", \"dd/MM/yyyy HH:mm:ss\"))\n",
     "df2 = df2.withColumn('data_source', F.lit('Heritage'))\n",
