Update door entry script (#215)
* door entry notebook updated

* update door entry script to drop unamed collumns

* fix spelling

* select specific columns

* rename script

* hotfix: var name

* remove unused helper function

* remove duplicate repairs sheet

* use module to referrence workflow name

* update script to remove deletion of columns

* remove unused file

Co-authored-by: el <elena@madetech.com>

--- a/cleaning-ElecMechFire-Door-Entry.ipynb
+++ b/cleaning-ElecMechFire-Door-Entry.ipynb
@@ -14,10 +14,10 @@
     "sys.argv.append('housing-repairs-raw-zone')\n",
     "\n",
     "sys.argv.append('--source_catalog_table')\n",
-    "sys.argv.append('housing_repairs_repairs_purdy')\n",
+    "sys.argv.append('housing_repairs_door_entry')\n",
     "\n",
     "sys.argv.append('--cleaned_repairs_s3_bucket_target')\n",
-    "sys.argv.append('s3://dataplatform-stg-refined-zone/housing-repairs/repairs-purdy/cleaned')"
+    "sys.argv.append('s3://dataplatform-stg-refined-zone/housing-repairs/repairs_electrical_mechanical_fire/door_entry/cleaned')"
    ]
   },
   {
@@ -47,11 +47,18 @@
     "    else:\n",
     "        return default\n",
     "\n",
+    "\n",
     "def getLatestPartitions(dfa):\n",
     "   dfa = dfa.where(col('import_year') == dfa.select(max('import_year')).first()[0])\n",
     "   dfa = dfa.where(col('import_month') == dfa.select(max('import_month')).first()[0])\n",
     "   dfa = dfa.where(col('import_day') == dfa.select(max('import_day')).first()[0])\n",
-    "   return dfa"
+    "   return dfa\n",
+    "\n",
+    "def clean_column_names(df):\n",
+    "    df= df.select([F.col(\"`{0}`\".format(c)).alias(c.replace('.', '')) for c in df.columns])\n",
+    "    df = df.select([F.col(col).alias(re.sub(\"_$\",\"\", col)) for col in df.columns]) \n",
+    "    df2 = df.select([F.col(col).alias(re.sub(\"[^0-9a-zA-Z$]+\",\"_\", col.lower())) for col in df.columns]) \n",
+    "    return df2"
    ]
   },
   {
@@ -85,15 +92,8 @@
     "    table_name=source_catalog_table,\n",
     ") \n",
     "\n",
-    "# source_data = glueContext.create_dynamic_frame.from_options(\n",
-    "#     connection_type = \"s3\", \n",
-    "#     connection_options={\"path\": \"s3://dataplatform-stg-raw-zone/housing-repairs/repairs-door-entry/import_year=2021/import_month=06/import_day=30/import_date=20210630/part-00000-5900fd1c-71d5-4aea-b1ad-86d6f9d0e2be.c000.snappy.parquet\",}, \n",
-    "#     format=\"parquet\",\n",
-    "#     transformation_ctx=\"source_data\"\n",
-    "# ) \n",
-    "\n",
     "df = source_data.toDF()\n",
-    "# df = getLatestPartitions(df)"
+    "df = getLatestPartitions(df)"
    ]
   },
   {
@@ -111,14 +111,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#lowercase and remove double underscores\n",
-    "# df = df.withColumnRenamed('contractor_job_status._complete_or_in_progress', 'order_status') \n",
-    "df= df.select([F.col(\"`{0}`\".format(c)).alias(c.replace('.', '')) for c in df.columns])\n",
+    "df2 = clean_column_names(df)\n",
     "\n",
-    "df = df.select([F.col(col).alias(re.sub(\"_$\",\"\", col)) for col in df.columns]) \n",
-    "\n",
-    "df2 = df.select([F.col(col).alias(re.sub(\"[^0-9a-zA-Z$]+\",\"_\", col.lower())) for col in df.columns]) \n",
     "df2.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.show(vertical=True)"
    ]
   },
   {
@@ -137,16 +141,11 @@
     "    .withColumnRenamed('description', 'description_of_work') \\\n",
     "    .withColumnRenamed('priority_code', 'work_priority_description') \\\n",
     "    .withColumnRenamed('temp_order_number', 'temp_order_number_full') \\\n",
-    "    .withColumnRenamed('budget_/_subjective', 'budget_code') \\\n",
+    "    .withColumnRenamed('budget_subjective', 'budget_code') \\\n",
     "    .withColumnRenamed('cost', 'order_value') \\\n",
     "    .withColumnRenamed('contractor_job_status_complete_or_in_progress', 'order_status') \\\n",
     "    .withColumnRenamed('date_completed', 'completed_date') \\\n",
     "    .withColumnRenamed('tess_number', 'contractor_ref') \\\n",
-    "\n",
-    "\n",
-    "\n",
-    "#drop unnecessary columns\n",
-    "df2 = df2.drop('column13')\n",
     "\n",
     "df2.printSchema()"
    ]
@@ -181,6 +180,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df2=df2.select(\"data_source\", \"datetime_raised\", \"sor\", \n",
+    "               \"operative\", \"property_address\", \"order_value\",\n",
+    "               \"description_of_work\", \"work_priority_description\",\n",
+    "               \"temp_order_number_full\", \"budget_code\", \"order_value\", \n",
+    "               \"order_status\", \"completed_date\", \"contractor_ref\",\n",
+    "               \"unnamed_14\", \"unnamed_15\", \"unnamed_16\", \"work_priority_priority_code\",\n",
+    "               \"import_datetime\", \"import_timestamp\", \"import_year\",\n",
+    "               \"import_month\", \"import_day\", \"import_date\", \n",
+    "                )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.printSchema()\n",
     "df2.show(vertical=True)"
    ]
   },
@@ -190,15 +207,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# cleanedDataframe = DynamicFrame.fromDF(df2, glueContext, \"cleanedDataframe\")\n",
-    "# parquetData = glueContext.write_dynamic_frame.from_options(\n",
-    "#     frame=cleanedDataframe,\n",
-    "#     connection_type=\"s3\",\n",
-    "#     format=\"parquet\",\n",
-    "#     connection_options={\"path\": cleaned_repairs_s3_bucket_target,\"partitionKeys\": [\"import_year\", \"import_month\", \"import_day\", \"import_date\"]},\n",
-    "#     transformation_ctx=\"parquetData\")\n",
+    "cleanedDataframe = DynamicFrame.fromDF(df2, glueContext, \"cleanedDataframe\")\n",
+    "parquetData = glueContext.write_dynamic_frame.from_options(\n",
+    "    frame=cleanedDataframe,\n",
+    "    connection_type=\"s3\",\n",
+    "    format=\"parquet\",\n",
+    "    connection_options={\"path\": cleaned_repairs_s3_bucket_target,\"partitionKeys\": [\"import_year\", \"import_month\", \"import_day\", \"import_date\"]},\n",
+    "    transformation_ctx=\"parquetData\")\n",
     "job.commit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
