add helper function to convert date column from date format to datetime
fix date column conversion to date with the correct format

Co-authored-by: annajgibson <anna.gibson@hackney.gov.uk>

--- a/cleaning-repairs-electrical-supplies.ipynb
+++ b/cleaning-repairs-electrical-supplies.ipynb
@@ -17,7 +17,7 @@
     "sys.argv.append('housing_repairs_electrical_supplies')\n",
     "\n",
     "sys.argv.append('--cleaned_repairs_s3_bucket_target')\n",
-    "sys.argv.append('s3://dataplatform-stg-refined-zone/housing-repairs/repairs_electrical_mechanical_fire/electrical_supplies/cleaned')"
+    "sys.argv.append('s3://dataplatform-stg-refined-zone/housing-repairs/repairs-electrical-mechanical-fire/electrical-supplies/cleaned')"
    ]
   },
   {
@@ -94,7 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.printSchema()"
+    "df.printSchema()\n",
+    "df.show(vertical=True, n=100)"
    ]
   },
   {
@@ -152,13 +153,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logger.info('convert timestamp and date columns to datetime / date field types')\n",
-    "df2 = df2.withColumn(\"date\", F.to_date('date'))\n",
-    "# df2.date = df2.select('date', F.date_format(col('date'), 'dd/MM/yyyy'))\n",
-    "df2.printSchema()\n",
-    "df2.show(vertical=True, n=200)\n",
     "\n",
-    "# df2 = df2.withColumn('date', F.to_date('date', \"dd/MM/yyyy\"))"
+    "\n",
+    "# drop empty cells in the date column\n",
+    "# df2 = df2.replace('NaT', None).replace('nan', None)\n",
+    "\n",
+    "\n",
+    "df2 = df2.withColumn('date', F.to_date('date', \"yyyy-MM-dd\"))\n",
+    "df2 = df2.filter(col(\"date\").isNotNull())\n",
+    "\n",
+    "\n",
+    "# df2 = df2.withColumn('date', F.when(F.isnull(F.col('date')), None).otherwise(F.col('date')))\n",
+    "df2.printSchema()\n",
+    "df2.show(vertical=True, n=200)"
    ]
   },
   {
@@ -167,7 +174,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.printSchema()"
+    "from pyspark.sql import types as t\n",
+    "from datetime import datetime\n",
+    "from pyspark.sql.types import TimestampType\n",
+    "\n",
+    "logger.info('convert timestamp and date columns to datetime / date field types')\n",
+    "\n",
+    "def date_to_datetime_converter(col):\n",
+    "    timestamp = datetime.combine(col, datetime.min.time())\n",
+    "    return timestamp\n",
+    "udf_date_to_datetime_converter = F.udf(date_to_datetime_converter, TimestampType())\n",
+    "df2 = df2.withColumn('datetime_raised', udf_date_to_datetime_converter(df2.date))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.printSchema()\n",
+    "df2.show(vertical=True, n=200)"
    ]
   },
   {
@@ -180,8 +207,7 @@
     "df2 = df2.withColumn('data_source', F.lit('ElecMechFire - Electrical Supplies'))\n",
     "\n",
     "# # rename column names\n",
-    "df2 = df2.withColumnRenamed('date', 'datetime_raised') \\\n",
-    "    .withColumnRenamed('requested_by', 'operative') \\\n",
+    "df2 = df2.withColumnRenamed('requested_by', 'operative') \\\n",
     "    .withColumnRenamed('address', 'property_address') \\\n",
     "    .withColumnRenamed('description', 'description_of_work') \\\n",
     "    .withColumnRenamed('priority_code', 'work_priority_description') \\\n",
@@ -191,6 +217,7 @@
     "    .withColumnRenamed('works_status_comments', 'order_status')\\\n",
     "    .withColumnRenamed('contractor_s_own_ref_no', 'contractor_ref')\\\n",
     "\n",
+    "df2 = df2.drop('date')\n",
     "df2.printSchema()\n",
     "df2.show(vertical=True, n=200)"
    ]
