refactor repairs door entry and lightning protection electrical mechanical fire safety scripts
converts datetime_raised column to datetime format from string

--- a/cleaning-ElecMechFire-Door-Entry.ipynb
+++ b/cleaning-ElecMechFire-Door-Entry.ipynb
@@ -131,12 +131,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pyspark.sql import types as t\n",
+    "from datetime import datetime\n",
+    "from pyspark.sql.types import TimestampType\n",
+    "\n",
+    "def date_to_datetime_converter(col):\n",
+    "    timestamp = datetime.combine(col, datetime.min.time())\n",
+    "    return timestamp\n",
+    "udf_date_to_datetime_converter = F.udf(date_to_datetime_converter, TimestampType())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df2.withColumn('date', F.to_date('date', \"dd.mm.yy\"))\n",
+    "df2 = df2.replace('nan', None)\n",
+    "df2 = df2.filter(col('date').isNotNull())\n",
+    "df2 = df2.withColumn('datetime_raised', udf_date_to_datetime_converter(df2.date))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.printSchema()\n",
+    "df2.show(vertical=True, n=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df2 = df2.withColumn('data_source', F.lit('ElecMechFire - Door Entry'))\n",
     "\n",
     "#rename column names to reflect harmonised column banes\n",
     "\n",
-    "df2 = df2.withColumnRenamed('date', 'datetime_raised') \\\n",
-    "    .withColumnRenamed('requested_by', 'operative') \\\n",
+    "df2 = df2.withColumnRenamed('requested_by', 'operative') \\\n",
     "    .withColumnRenamed('address', 'property_address') \\\n",
     "    .withColumnRenamed('description', 'description_of_work') \\\n",
     "    .withColumnRenamed('priority_code', 'work_priority_description') \\\n",
@@ -147,7 +184,9 @@
     "    .withColumnRenamed('date_completed', 'completed_date') \\\n",
     "    .withColumnRenamed('tess_number', 'contractor_ref') \\\n",
     "\n",
-    "df2.printSchema()"
+    "df2 = df2.drop('date')\n",
+    "df2.printSchema()\n",
+    "df2.show(vertical=True, n=200)"
    ]
   },
   {
