use `F.to_timestamp` function instead

--- a/cleaning-ElecMechFire-Door-Entry.ipynb
+++ b/cleaning-ElecMechFire-Door-Entry.ipynb
@@ -131,26 +131,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark.sql import types as t\n",
-    "from datetime import datetime\n",
-    "from pyspark.sql.types import TimestampType\n",
-    "\n",
-    "def date_to_datetime_converter(col):\n",
-    "    timestamp = datetime.combine(col, datetime.min.time())\n",
-    "    return timestamp\n",
-    "udf_date_to_datetime_converter = F.udf(date_to_datetime_converter, TimestampType())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2 = df2.withColumn('date', F.to_date('date', \"dd.mm.yy\"))\n",
     "df2 = df2.replace('nan', None)\n",
     "df2 = df2.filter(col('date').isNotNull())\n",
-    "df2 = df2.withColumn('datetime_raised', udf_date_to_datetime_converter(df2.date))"
+    "df2 = df2.withColumn('date', F.to_date('date', \"dd.mm.yy\")).withColumn('datetime_raised', F.to_timestamp('date'))"
    ]
   },
   {
