--- a/cleaning-ElecMechFire-Lightning-Protection.ipynb
+++ b/cleaning-ElecMechFire-Lightning-Protection.ipynb
@@ -2,65 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>36</td><td>None</td><td>pyspark</td><td>idle</td><td></td><td></td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.argv.append('--JOB_NAME')\n",
@@ -78,24 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from awsglue.transforms import *\n",
     "from awsglue.utils import getResolvedOptions\n",
@@ -125,24 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "args = getResolvedOptions(sys.argv, ['JOB_NAME'])\n",
     "\n",
@@ -160,24 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# logger.info('Fetch Source Data')\n",
     "source_data = glueContext.create_dynamic_frame.from_catalog(\n",
@@ -191,48 +90,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, bar_style='info', description='Progress:', layout=Layout(height='25px', width='50%'),…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- Address: string (nullable = true)\n",
-      " |-- Description: string (nullable = true)\n",
-      " |-- Date: string (nullable = true)\n",
-      " |-- temp_order_number: string (nullable = true)\n",
-      " |-- priority_code: string (nullable = true)\n",
-      " |-- SOR: string (nullable = true)\n",
-      " |-- Cost: string (nullable = true)\n",
-      " |-- Subjective: string (nullable = true)\n",
-      " |-- contractor's_own_ref._no: string (nullable = true)\n",
-      " |-- new_uhw_number: string (nullable = true)\n",
-      " |-- requested_by: string (nullable = true)\n",
-      " |-- import_datetime: timestamp (nullable = true)\n",
-      " |-- import_timestamp: string (nullable = true)\n",
-      " |-- import_year: string (nullable = true)\n",
-      " |-- import_month: string (nullable = true)\n",
-      " |-- import_day: string (nullable = true)\n",
-      " |-- import_date: string (nullable = true)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.printSchema()"
    ]
@@ -269,10 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logger.info('convert timestamp and date columns to datetime / date field types')\n",
-    "df2 = df2.withColumn('date', F.to_date('date', \"dd.mm.yy\"))\n",
     "df2 = df2.replace('nan', None)\n",
-    "df2 = df2.filter(col(\"date\").isNotNull())"
+    "df2 = df2.filter(col('date').isNotNull())\n",
+    "df2 = df2.withColumn('date', F.to_date('date', \"dd.mm.yy\")).withColumn('datetime_raised', F.to_timestamp('date'))"
    ]
   },
   {
@@ -282,26 +141,6 @@
    "outputs": [],
    "source": [
     "df2.show(vertical=True, n=200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql import types as t\n",
-    "from datetime import datetime\n",
-    "from pyspark.sql.types import TimestampType\n",
-    "\n",
-    "logger.info('convert timestamp and date columns to datetime / date field types')\n",
-    "# df2 = df2.filter(col(\"date\").isNotNull())\n",
-    "\n",
-    "def date_to_datetime_converter(col):\n",
-    "    timestamp = datetime.combine(col, datetime.min.time())\n",
-    "    return timestamp\n",
-    "udf_date_to_datetime_converter = F.udf(date_to_datetime_converter, TimestampType())\n",
-    "df2 = df2.withColumn('datetime_raised', udf_date_to_datetime_converter(df2.date))"
    ]
   },
   {
