remove unnecessary creation of new column when converting date column to datetime format

--- a/cleaning-ElecMechFire-Lightning-Protection.ipynb
+++ b/cleaning-ElecMechFire-Lightning-Protection.ipynb
@@ -129,9 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = df2.replace('nan', None)\n",
-    "df2 = df2.filter(col('date').isNotNull())\n",
-    "df2 = df2.withColumn('date', F.to_date('date', \"dd.mm.yy\")).withColumn('datetime_raised', F.to_timestamp('date'))"
+    "df2 = df2.withColumn('datetime_raised', F.to_timestamp('date', 'dd.MM.yy'))"
    ]
   },
   {
