--- a/cleaning-repairs-electrical-supplies.ipynb
+++ b/cleaning-repairs-electrical-supplies.ipynb
@@ -144,7 +144,7 @@
     "]]\n",
     "\n",
     "df2.printSchema()\n",
-    "df2.show(vertical=True, n=1000)"
+    "df2.show(vertical=True, n=200)"
    ]
   },
   {
@@ -153,9 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = df2.replace('NaT', None).replace('nan', None)\n",
-    "df2 = df2.filter(col(\"date\").isNotNull())\n",
-    "df2 = df2.withColumn('date', F.to_date('date', \"yyyy-MM-dd\")).withColumn('datetime_raised', F.to_timestamp('date'))"
+    "df2 = df2.withColumn('datetime_raised', F.to_timestamp('date', 'yyyy-MM-dd'))"
    ]
   },
   {
