undo drop date column and rename to datetime_raised

--- a/cleaning-repairs-electrical-supplies.ipynb
+++ b/cleaning-repairs-electrical-supplies.ipynb
@@ -153,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = df2.withColumn('datetime_raised', F.to_timestamp('date', 'yyyy-MM-dd'))"
+    "df2 = df2.withColumn('date', F.to_timestamp('date', 'yyyy-MM-dd'))"
    ]
   },
   {
@@ -185,8 +185,8 @@
     "    .withColumnRenamed('total_invoiced', 'order_value')\\\n",
     "    .withColumnRenamed('works_status_comments', 'order_status')\\\n",
     "    .withColumnRenamed('contractor_s_own_ref_no', 'contractor_ref')\\\n",
+    "    .withColumnRenamed('date', 'datetime_raised')\n",
     "\n",
-    "df2 = df2.drop('date')\n",
     "df2.printSchema()\n",
     "df2.show(vertical=True, n=200)"
    ]
