--- a/cleaning-ElecMechFire-Lift-Breakdown-ela.ipynb
+++ b/cleaning-ElecMechFire-Lift-Breakdown-ela.ipynb
@@ -14,10 +14,10 @@
     "sys.argv.append('housing-repairs-raw-zone')\n",
     "\n",
     "sys.argv.append('--source_catalog_table')\n",
-    "sys.argv.append('housing_repairs_door_entry')\n",
+    "sys.argv.append('housing_repairs_lift_breakdown_ela')\n",
     "\n",
     "sys.argv.append('--cleaned_repairs_s3_bucket_target')\n",
-    "sys.argv.append('s3://dataplatform-stg-refined-zone/housing-repairs/repairs_electrical_mechanical_fire/door_entry/cleaned')"
+    "sys.argv.append('s3://dataplatform-stg-refined-zone/housing-repairs/repairs_electrical_mechanical_fire/housing_lift_breakdown_ela/cleaned')"
    ]
   },
   {
@@ -26,7 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "from awsglue.transforms import *\n",
     "from awsglue.utils import getResolvedOptions\n",
     "from pyspark.context import SparkContext\n",
@@ -47,7 +46,6 @@
     "    else:\n",
     "        return default\n",
     "\n",
-    "\n",
     "def getLatestPartitions(dfa):\n",
     "   dfa = dfa.where(col('import_year') == dfa.select(max('import_year')).first()[0])\n",
     "   dfa = dfa.where(col('import_month') == dfa.select(max('import_month')).first()[0])\n",
@@ -55,10 +53,16 @@
     "   return dfa\n",
     "\n",
     "def clean_column_names(df):\n",
-    "    df= df.select([F.col(\"`{0}`\".format(c)).alias(c.replace('.', '')) for c in df.columns])\n",
-    "    df = df.select([F.col(col).alias(re.sub(\"_$\",\"\", col)) for col in df.columns]) \n",
-    "    df2 = df.select([F.col(col).alias(re.sub(\"[^0-9a-zA-Z$]+\",\"_\", col.lower())) for col in df.columns]) \n",
-    "    return df2"
+    "    # remove full stops from column names\n",
+    "    df = df.select([F.col(\"`{0}`\".format(c)).alias(\n",
+    "        c.replace('.', '')) for c in df.columns])\n",
+    "    # remove trialing underscores\n",
+    "    df = df.select([F.col(col).alias(re.sub(\"_$\", \"\", col))\n",
+    "                   for col in df.columns])\n",
+    "    # lowercase and remove double underscores\n",
+    "    df2 = df.select([F.col(col).alias(\n",
+    "        re.sub(\"[^0-9a-zA-Z$]+\", \"_\", col.lower())) for col in df.columns])\n",
+    "    return df2\n"
    ]
   },
   {
@@ -87,6 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# logger.info('Fetch Source Data')\n",
     "source_data = glueContext.create_dynamic_frame.from_catalog(\n",
     "    name_space=source_catalog_database,\n",
     "    table_name=source_catalog_table,\n",
@@ -112,7 +117,6 @@
    "outputs": [],
    "source": [
     "df2 = clean_column_names(df)\n",
-    "\n",
     "df2.printSchema()"
    ]
   },
@@ -122,55 +126,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.show(vertical=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2 = df2.withColumn('datetime_raised', F.to_timestamp('date', 'dd.MM.yy'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.printSchema()\n",
-    "df2.show(vertical=True, n=200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2 = df2.withColumn('data_source', F.lit('ElecMechFire - Door Entry'))\n",
-    "\n",
     "logger.info('convert timestamp and date columns to datetime / date field types')\n",
-    "df2 = df2.withColumn('date', F.to_date('date', \"dd/MM/yyyy\"))\n",
+    "df2 = df2.withColumn('datetime_raised', F.to_timestamp('date', 'MM/dd/yy HH:mm:ss'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add new data source column to specify which repairs sheet the repair came from\n",
+    "df2 = df2.withColumn('data_source', F.lit('ElecMechFire - Lift Breakdown - ELA'))\n",
     "\n",
-    "#rename column names to reflect harmonised column banes\n",
-    "\n",
+    "# # rename column names\n",
     "df2 = df2.withColumnRenamed('requested_by', 'operative') \\\n",
     "    .withColumnRenamed('address', 'property_address') \\\n",
     "    .withColumnRenamed('description', 'description_of_work') \\\n",
     "    .withColumnRenamed('priority_code', 'work_priority_description') \\\n",
     "    .withColumnRenamed('temp_order_number', 'temp_order_number_full') \\\n",
-    "    .withColumnRenamed('budget_subjective', 'budget_code') \\\n",
-    "    .withColumnRenamed('cost', 'order_value') \\\n",
-    "    .withColumnRenamed('contractor_job_status_complete_or_in_progress', 'order_status') \\\n",
-    "    .withColumnRenamed('date_completed', 'completed_date') \\\n",
-    "    .withColumnRenamed('tess_number', 'contractor_ref') \\\n",
+    "    .withColumnRenamed('contractor_s_own_ref_no', 'contractor_ref')\n",
     "\n",
-    "df2 = df2.drop('date')\n",
-    "df2.printSchema()\n",
-    "df2.show(vertical=True, n=200)"
+    "df2.printSchema()"
    ]
   },
   {
@@ -203,12 +180,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2=df2.select(\"data_source\", \"datetime_raised\", \"sor\", \n",
-    "               \"operative\", \"property_address\", \"order_value\",\n",
-    "               \"description_of_work\", \"work_priority_description\",\n",
-    "               \"temp_order_number_full\", \"budget_code\", \"order_value\", \n",
-    "               \"order_status\", \"completed_date\", \"contractor_ref\",\n",
-    "               \"unnamed_14\", \"unnamed_15\", \"unnamed_16\", \"work_priority_priority_code\",\n",
+    "df2=df2.select(\"data_source\", \"datetime_raised\", \n",
+    "               \"operative\", \"property_address\",\"work_priority_description\",\n",
+    "               \"temp_order_number_full\", \"contractor_ref\",\n",
+    "               \"work_priority_priority_code\",\n",
     "               \"import_datetime\", \"import_timestamp\", \"import_year\",\n",
     "               \"import_month\", \"import_day\", \"import_date\", \n",
     "                )"
@@ -220,7 +195,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2.printSchema()\n",
     "df2.show(vertical=True)"
    ]
   },
