update order status column to show "Completed" is status is "Y"

--- a/cleaning-ElecMechFire-Reactive-Rewires.ipynb
+++ b/cleaning-ElecMechFire-Reactive-Rewires.ipynb
@@ -17,7 +17,7 @@
     "sys.argv.append('housing_repairs_reactive_rewires')\n",
     "\n",
     "sys.argv.append('--cleaned_repairs_s3_bucket_target')\n",
-    "sys.argv.append('s3://dataplatform-stg-refined-zone/housing-repairs/repairs-electrical-mechanical-fire/housing-reactive-rewires/cleaned')"
+    "sys.argv.append('s3://dataplatform-stg-refined-zone/housing-repairs/repairs-electrical-mechanical-fire/reactive-rewires/cleaned')"
    ]
   },
   {
@@ -187,7 +187,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = df2.withColumn('date', F.to_timestamp('date', 'yyyy-MM-dd')).withColumnRenamed('date', 'datetime_raised')"
+    "df2 = df2.withColumn('date', F.to_timestamp('date', 'yyyy-MM-dd')).withColumnRenamed('date', 'datetime_raised')\n",
+    "df2 = df2.withColumn('status_of_completed_y_n', F.when(df2['status_of_completed_y_n']=='Y', 'Completed').otherwise(''))\\\n",
+    "    .withColumnRenamed('status_of_completed_y_n', 'order_status')"
    ]
   },
   {
@@ -216,7 +218,6 @@
     "    .withColumnRenamed('priority_code', 'work_priority_description') \\\n",
     "    .withColumnRenamed('temp_order_number', 'temp_order_number_full') \\\n",
     "    .withColumnRenamed('cost_of_repairs_work', 'order_value')\\\n",
-    "    .withColumnRenamed('status_of_completed_y_n', 'order_status')\\\n",
     "    .withColumnRenamed('contractor_s_own_ref_no', 'contractor_ref')\n",
     "\n",
     "df2.printSchema()\n",
