map repairs priority without using a udf

--- a/cleaning-ElecMechFire-Reactive-Rewires.ipynb
+++ b/cleaning-ElecMechFire-Reactive-Rewires.ipynb
@@ -225,28 +225,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def map_repair_priority(code):\n",
-    "    if code == 'Immediate':\n",
-    "        return 1\n",
-    "    elif code == 'Emergency':\n",
-    "        return 2\n",
-    "    elif code == 'Urgent':\n",
-    "        return 3\n",
-    "    elif code == 'Normal':\n",
-    "        return 4\n",
-    "    else:\n",
-    "        return None\n",
-    "    \n",
-    "\n",
-    "# # convert to a UDF Function by passing in the function and the return type of function (string in this case)\n",
-    "udf_map_repair_priority = F.udf(map_repair_priority, StringType())\n",
-    "# apply function\n",
-    "df2 = df2.withColumn('work_priority_priority_code', udf_map_repair_priority('work_priority_description'))"
+    "df2 = df2.withColumn(\"work_priority_priority_code\", when(df2['work_priority_description'] == \"Immediate\", 1)\n",
+    "                                 .when(df2['work_priority_description'] == \"Emergency\", 2)\n",
+    "                                 .when(df2['work_priority_description'] == \"Urgent\", 3)                                                                 \n",
+    "                                 .when(df2['work_priority_description'] == \"Normal\", 4) \n",
+    "                                 .otherwise(None))"
    ]
   },
   {
@@ -255,6 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df2.printSchema()\n",
     "df2.show(vertical=True)"
    ]
   },
